@@ -235,6 +235,9 @@ OpenLogFile (char *filename)
    if (!tlog->offset_end)
       printf ("Empty file! \n");
 
+   /* initialize date headers hash table */
+   tlog->date_headers = g_hash_table_new_full (
+                NULL, NULL, NULL, (GDestroyNotify) gtk_tree_path_free);
    return tlog;
 
 }
@@ -1100,6 +1103,7 @@ CloseLog (Log * log)
        gtk_tree_path_free (log->expand_paths[i]);
 
    gtk_tree_path_free (log->current_path);
+   g_hash_table_destroy (log->date_headers);
 
    g_free (log);
    return;
